# Auto-mlops

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DEPLOYMENT_CONTEXT.md  DIARY.md  GOAL.md  PRD.md  README.md  alembic.ini  api_server.py  cli.py  mcp_mlops_tools.py  pyproject.toml  pytest.ini  requirements.txt  test_admin_endpoints.py  test_api_keys.py  test_api_server_auth.py  test_auth_middleware.py  test_cli_admin.py  test_cors_config.py  test_data_quality.py  test_data_validation_tools.py  test_db.py  test_db_migrations.py  test_db_models.py  test_db_repositories.py  test_db_session.py  test_detect_data_drift.py  test_env_example.py  test_memory_search.py  test_metrics_endpoints.py  test_middleware.py  test_mlops_tools.py  test_monitor_model_performance.py  test_monitoring.py  test_prometheus_metrics.py  (+4 more)
.github/workflows/: ci.yml  quality-gate.yml
action/: __init__.py  execute_step.py
agent/: __init__.py  agentSession.py  agent_loop.py  approval.py  contextManager.py  model_manager.py
automation/full_platform/: README.md  docker-compose.yml  requirements.txt
config/: mlops_defaults.yaml  models.json  profiles.yaml
course_context/emlo_graphify/: GRAPH_REPORT.md  README.md  graph.json
data_quality/: __init__.py  models.py  profiler.py  validator.py  validators.py
db/: __init__.py  models.py  repositories.py  session.py
db/migrations/: README  env.py  script.py.mako
decision/: __init__.py  decision.py
docs/: BASELINE.md  PROJECT_HANDOFF.md  api-reference.md  baseline-checkpoint-2026-05-02.md  deployment-targets.md  getting-started.md  security.md
docs/adr/: 0001-workflow-registry-source-of-truth.md  0002-workflow-runtime-executes-registry-templates-for-phase-1-setup-pipeline.md  0003-registry-executed-workflows-skip-post-step-llm-perception-by-default.md  0004-phase-5-follows-capstone-container-and-ci-evidence-before-kubernetes.md
docs/architecture/: mcp_server_foundation.md
docs/examples/: basic-pipeline.md  custom-deployment.md
examples/fashion_mnist/: run_e2e_demo.py
examples/image_classification/: README.md  agent_queries.md  run_example.py  setup_example.sh  verify_golden.py
examples/tabular_regression/: README.md  agent_queries.md  train.py
examples/text_classification/: README.md  agent_queries.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
graphify-out/: GRAPH_REPORT.md  manifest.json
mcp_servers/: __init__.py
mcp_servers/mcp_configs/: __init__.py  dvc_ops.py  github_ops.py  hydra_ops.py  mlflow_ops.py
mcp_servers/mlops/: __init__.py  compatibility.py  registry.py  server.py
memory/: __init__.py  memory_search.py
memory/experiment_logs/: .gitkeep
memory/session_logs/: .gitkeep
metrics/: __init__.py  collector.py  models.py
monitoring/: __init__.py  drift_detector.py  model_monitor.py  models.py
observability/: __init__.py  logging.py  metrics.py
perception/: __init__.py  perception.py
prompts/: decision_prompt.txt  deployment_selector_prompt.txt  improvement_prompt.txt  perception_prompt.txt  summarizer_prompt.txt
resilience/: __init__.py  bulkhead.py  circuit_breaker.py  retry.py  timeout.py
sdk/: __init__.py  async_client.py  client.py
security/: __init__.py  api_keys.py  middleware.py  models.py
summarization/: __init__.py  summarizer.py
templates/docker/: Dockerfile.train
templates/dvc/: dvc.yaml
templates/github/: train.yml
templates/hydra/: config.yaml
tests/: __init__.py  conftest.py  test_agent_logging.py  test_agent_session.py  test_circuit_breaker_retry.py  test_conftest_fixtures.py  test_context_manager.py  test_decision.py  test_model_manager.py  test_observability.py  test_perception.py  test_resilience.py  test_step_execution_tracker.py
tests/e2e/: __init__.py  test_phase1_setup_pipeline.py  test_phase3_capstone_orchestrator.py  test_phase4_prepare_capstone_data.py  test_train_deploy_flow.py
tests/fixtures/: mcp_tool_contract.json
tests/integration/: __init__.py  test_api_endpoints.py  test_mcp_tools.py  test_websocket.py
tests/load/: __init__.py  locustfile.py
tests/root_migrated/: __init__.py  test_admin_endpoints.py  test_api_keys.py  test_api_server_auth.py  test_auth_middleware.py  test_cli_admin.py  test_cors_config.py  test_course_graph_prompt_coverage.py  test_db.py  test_db_migrations.py  test_db_models.py  test_db_repositories.py  test_db_session.py  test_decision_prompt_data_validation.py  test_env_example.py  test_ge_validator.py  test_lambda_labs_deployment_prompt.py  test_memory_search.py  test_metrics_endpoints.py  test_middleware.py  test_mlops_tools.py  test_monitoring.py  test_prometheus_metrics.py  test_rate_limiting.py  test_security.py  test_security_models.py  test_session_manager.py  test_setup_alerting.py
tests/security/: __init__.py  test_auth.py  test_rate_limiting.py
utils/: __init__.py
workflow/: __init__.py  registry.py
(+296 files in other folders)
