[project]
name = "mlops-agent"
version = "1.0.0"
description = "AI-powered MLOps Agent for automating ML pipeline setup with Hydra, MLflow, DVC, Docker, and GitHub Actions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sagar" }
]
keywords = ["mlops", "agent", "ai", "ml", "hydra", "mlflow", "dvc", "automation", "mcp"]

dependencies = [
    # Core async and utilities
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "networkx>=3.0",
    
    # MCP (Model Context Protocol)
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.3",
    
    # LLM Providers
    "openai>=1.0.0",
    "google-genai>=0.3.0",
    
    # Web API
    "aiohttp>=3.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database ORM
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    
    # MLOps Tools (for agent to use)
    "mlflow>=2.10.0",
    "dvc>=3.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    
    # Memory search
    "rapidfuzz>=3.0.0",

    # System monitoring
    "psutil>=5.9.0",

    # Data/model drift detection
    "evidently>=0.4.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Structured logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
mlops-agent = "cli:main"
mlops-server = "api_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
